meecast (0.5.3) unstable; urgency=low

  * Updated Germany translation

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 3 Mar 2011 12:42:23 +0200

meecast (0.5.2) unstable; urgency=low

  * Added station Juankoski to yr.no database
  * Fixed problem with long station name in events widget
  * Updated Russian translation
  * Added new source foreca.com

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 3 Mar 2011 12:42:23 +0200

meecast (0.5.1) unstable; urgency=low

  * Fixed problem with negative temperatures in source gismeteo.ru 
  * Fixed problem with long station name in events, lockscreen and standby widget 

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 23 Feb 2011 22:42:23 +0200

meecast (0.5) unstable; urgency=low

  * Changed font to Nokia Pure for Lock Screen and StandbyScreen 
  * Fixed problem with disabling Meecast widget in StandbyScreen
  * Updated Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 22 Feb 2011 15:42:23 +0200

meecast (0.4.9) unstable; urgency=low

  * Fixed problem with lockscreen widget and wallpaper images with various dpi 
  * Fixed problem with temperature in Farenheit unit and autoupdating
  * Updated Germany, Polish, Swedish translations
  * Added hours forecast for source gismeteo.ru
  * Rewrote events widget
  * Added StandbyScreen widget

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 18 Feb 2011 22:42:23 +0200

meecast (0.4.8) unstable; urgency=low

  * Added stations in yr.no database (Mexico, Netherland, Bulgaria)
  * Added stations in gismeteo.ru database (Bulgaria)
  * Added LockScreen widget
  * Decreased size of image files. Thanks Wolfgang Fürst
  * Updated Russian, Finland translations
  * Small improvement in hours view 

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 10 Feb 2011 16:42:23 +0200

meecast (0.4.7) unstable; urgency=low

  * Fixed problem with new stations in sources yr.no and gismeteo.ru 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Jan 2011 18:42:23 +0200

meecast (0.4.6) unstable; urgency=low

  * Added autoupdating function